--- a/packages/docs/src/pages/en/example/menu.mdx
+++ b/packages/docs/src/pages/en/example/menu.mdx
@@ -4,6 +4,6 @@ description: SvelteHeadlessUI Menu Example
 layout: ../../../layouts/ExampleLayout.astro
 ---
 
-import Menu from '../../../components/Examples/Menu.svelte'
+import Menu from '@examples/menu/index.svelte'
 
 <Menu client:load />
