--- a/packages/docs/src/pages/combobox.mdx
+++ b/packages/docs/src/pages/combobox.mdx
@@ -1,7 +1,7 @@
 ---
 title: Combobox (Autocomplete)
 description: Combobox (Autocomplete)
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-teal-400 to-cyan-400">
