--- a/packages/docs/src/pages/design.mdx
+++ b/packages/docs/src/pages/design.mdx
@@ -1,7 +1,7 @@
 ---
 title: Design Approach
 description: Design Approach of Svelte-HeadlessUI
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 Most Web Frameworks have the concept of "slots" which enables composition of components and DOM trees. The host component can define placeholders in it's own markup where the external consumer of the component can pass in content to be included.
