--- a/packages/docs/src/pages/dialog.mdx
+++ b/packages/docs/src/pages/dialog.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dialog (Modal)
 description: Dialog (Modal)
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-sky-400 to-indigo-500">
