--- a/packages/docs/src/pages/disclosure.mdx
+++ b/packages/docs/src/pages/disclosure.mdx
@@ -1,7 +1,7 @@
 ---
 title: Disclosure
 description: Disclosure
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-fuchsia-500 to-purple-600">
