--- a/packages/docs/src/pages/example/dialog.mdx
+++ b/packages/docs/src/pages/example/dialog.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dialog Example
 description: SvelteHeadlessUI Dialog Example
-layout: ../../../layouts/ExampleLayout.astro
+layout: ../../layouts/ExampleLayout.astro
 ---
 
 import Dialog from '@examples/dialog/index.svelte'
