--- a/packages/docs/src/pages/example/disclosure.mdx
+++ b/packages/docs/src/pages/example/disclosure.mdx
@@ -1,7 +1,7 @@
 ---
 title: Disclosure Example
 description: SvelteHeadlessUI Disclosure Example
-layout: ../../../layouts/ExampleLayout.astro
+layout: ../../layouts/ExampleLayout.astro
 ---
 
 import Disclosure from '@examples/disclosure/index.svelte'
