--- a/packages/docs/src/pages/example/listbox.mdx
+++ b/packages/docs/src/pages/example/listbox.mdx
@@ -1,7 +1,7 @@
 ---
 title: Listbox Example
 description: SvelteHeadlessUI Menu Example
-layout: ../../../layouts/ExampleLayout.astro
+layout: ../../layouts/ExampleLayout.astro
 ---
 
 import Listbox from '@examples/listbox/index.svelte'
