--- a/packages/docs/src/pages/example/menu.mdx
+++ b/packages/docs/src/pages/example/menu.mdx
@@ -1,7 +1,7 @@
 ---
 title: Menu Example
 description: SvelteHeadlessUI Menu Example
-layout: ../../../layouts/ExampleLayout.astro
+layout: ../../layouts/ExampleLayout.astro
 ---
 
 import Menu from '@examples/menu/index.svelte'
