--- a/packages/docs/src/pages/example/popover.mdx
+++ b/packages/docs/src/pages/example/popover.mdx
@@ -1,7 +1,7 @@
 ---
 title: Popover Example
 description: SvelteHeadlessUI Menu Example
-layout: ../../../layouts/ExampleLayout.astro
+layout: ../../layouts/ExampleLayout.astro
 ---
 
 import Popover from '@examples/popover/index.svelte'
