--- a/packages/docs/src/pages/example/combobox.mdx
+++ b/packages/docs/src/pages/example/combobox.mdx
@@ -1,7 +1,7 @@
 ---
 title: Combobox Example
 description: SvelteHeadlessUI Combobox Example
-layout: ../../../layouts/ExampleLayout.astro
+layout: ../../layouts/ExampleLayout.astro
 ---
 
 import Combobox from '@examples/combobox/index.svelte'
