--- a/packages/docs/src/pages/example/transition.mdx
+++ b/packages/docs/src/pages/example/transition.mdx
@@ -1,7 +1,7 @@
 ---
 title: Transition Example
 description: SvelteHeadlessUI Menu Example
-layout: ../../../layouts/ExampleLayout.astro
+layout: ../../layouts/ExampleLayout.astro
 ---
 
 import Transition from '@examples/transition/index.svelte'
