--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 title:
 description: Introduction to Svelte-HeadlessUI
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 # Svelte-HeadlessUI
