--- a/packages/docs/src/pages/listbox.mdx
+++ b/packages/docs/src/pages/listbox.mdx
@@ -1,7 +1,7 @@
 ---
 title: Listbox (Select)
 description: Listbox (Select)
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-amber-300 to-orange-500">
