--- a/packages/docs/src/pages/menu.mdx
+++ b/packages/docs/src/pages/menu.mdx
@@ -1,7 +1,7 @@
 ---
 title: Menu (Dropdown)
 description: Menu (Dropdown)
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r to-indigo-500 from-purple-500">
