--- a/packages/docs/src/pages/popover.mdx
+++ b/packages/docs/src/pages/popover.mdx
@@ -1,7 +1,7 @@
 ---
 title: Popover
 description: Popover
-layout: ../../layouts/MainLayout.astro
+layout: ../layouts/MainLayout.astro
 ---
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-orange-400 to-pink-600">
