--- a/packages/docs/src/pages/switch.mdx
+++ b/packages/docs/src/pages/switch.mdx
@@ -1,13 +1,11 @@
 ---
-title: Popover
-description: Popover
+title: Switch (Toggle)
+description: Switch (Toggle)
 layout: ../layouts/MainLayout.astro
 ---
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-orange-400 to-pink-600">
 	<div class="w-full h-[508px]">
-		<div class="absolute inset-0">
-			<iframe class="h-full w-full" src="example/popover" frameborder="0" scrolling="no"></iframe>
-		</div>
+		<div class="absolute inset-0">{/* <iframe class="h-full w-full" src="example/switch" frameborder="0" scrolling="no"></iframe> */}</div>
 	</div>
 </div>
