--- a/packages/docs/src/pages/radio-group.mdx
+++ b/packages/docs/src/pages/radio-group.mdx
@@ -6,6 +6,8 @@ layout: ../layouts/MainLayout.astro
 
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-orange-400 to-pink-600">
 	<div class="w-full h-[508px]">
-		<div class="absolute inset-0">{/* <iframe class="h-full w-full" src="example/radio-group" frameborder="0" scrolling="no"></iframe> */}</div>
+		<div class="absolute inset-0">
+			{/* <iframe class="h-full w-full" src="/svelte-headlessui/example/radio-group" frameborder="0" scrolling="no"></iframe> */}
+		</div>
 	</div>
 </div>
