--- a/packages/docs/src/pages/transition.mdx
+++ b/packages/docs/src/pages/transition.mdx
@@ -7,7 +7,7 @@ layout: ../layouts/MainLayout.astro
 <div class="relative mt-8 mb-12 flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-pink-500 to-rose-500">
 	<div class="w-full h-[378px]">
 		<div class="absolute inset-0">
-			<iframe class="h-full w-full" src="example/transition" frameborder="0" scrolling="no"></iframe>
+			<iframe class="h-full w-full" src="/svelte-headlessui/example/transition" frameborder="0" scrolling="no"></iframe>
 		</div>
 	</div>
 </div>
