--- a/packages/docs/src/pages/example/combobox.mdx
+++ b/packages/docs/src/pages/example/combobox.mdx
@@ -6,4 +6,10 @@ layout: ../../layouts/ExampleLayout.astro
 
 import Combobox from '@examples/combobox/index.svelte'
 
-<Combobox client:load />
+<div class="relative flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-teal-400 to-cyan-400">
+	<div class="w-full h-[378px]">
+		<div class="absolute inset-0">
+			<Combobox client:load />
+		</div>
+	</div>
+</div>
