--- a/packages/docs/src/pages/example/dialog.mdx
+++ b/packages/docs/src/pages/example/dialog.mdx
@@ -6,4 +6,10 @@ layout: ../../layouts/ExampleLayout.astro
 
 import Dialog from '@examples/dialog/index.svelte'
 
-<Dialog client:load />
+<div class="relative flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-sky-400 to-indigo-500">
+	<div class="w-full h-[378px]">
+		<div class="absolute inset-0">
+			<Dialog client:load />
+		</div>
+	</div>
+</div>
