--- a/packages/docs/src/pages/example/disclosure.mdx
+++ b/packages/docs/src/pages/example/disclosure.mdx
@@ -6,4 +6,10 @@ layout: ../../layouts/ExampleLayout.astro
 
 import Disclosure from '@examples/disclosure/index.svelte'
 
-<Disclosure client:load />
+<div class="relative flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-fuchsia-500 to-purple-600">
+	<div class="w-full h-[378px]">
+		<div class="absolute inset-0">
+			<Disclosure client:load />
+		</div>
+	</div>
+</div>
