--- a/packages/docs/src/pages/example/popover.mdx
+++ b/packages/docs/src/pages/example/popover.mdx
@@ -6,4 +6,10 @@ layout: ../../layouts/ExampleLayout.astro
 
 import Popover from '@examples/popover/index.svelte'
 
-<Popover client:load />
+<div class="relative flex flex-col items-center justify-center overflow-hidden rounded-xl bg-gradient-to-r from-orange-400 to-pink-600">
+	<div class="w-full h-[508px]">
+		<div class="absolute inset-0">
+			<Popover client:load />
+		</div>
+	</div>
+</div>
