add opengraph images auto-open components

--- a/packages/docs/src/pages/dialog.mdx
+++ b/packages/docs/src/pages/dialog.mdx
@@ -2,6 +2,9 @@
 title: Dialog (Modal)
 description: Dialog (Modal)
 layout: ../layouts/MainLayout.astro
+image:
+  src: /svelte-headlessui/dialog.png
+  alt: A fully-managed, renderless dialog component jam-packed with accessibility and keyboard features, perfect for building completely custom modal and dialog windows for your next application.
 ---
 
 <iframe class="w-full h-[378px] mt-8 mb-4 rounded-xl" src="/svelte-headlessui/example/dialog" frameborder="0" scrolling="no"></iframe>
