--- a/packages/docs/src/pages/disclosure.mdx
+++ b/packages/docs/src/pages/disclosure.mdx
@@ -2,6 +2,9 @@
 title: Disclosure
 description: Disclosure
 layout: ../layouts/MainLayout.astro
+image:
+  src: /svelte-headlessui/disclosure.png
+  alt: A simple, accessible foundation for building custom UIs that show and hide content, like togglable accordion panels.
 ---
 
 <iframe class="w-full h-[378px] mt-8 mb-4 rounded-xl" src="/svelte-headlessui/example/disclosure" frameborder="0" scrolling="no"></iframe>
