--- a/packages/docs/src/pages/listbox.mdx
+++ b/packages/docs/src/pages/listbox.mdx
@@ -2,6 +2,9 @@
 title: Listbox (Select)
 description: Listbox (Select)
 layout: ../layouts/MainLayout.astro
+image:
+  src: /svelte-headlessui/listbox.png
+  alt: Listboxes are a great foundation for building custom, accessible select menus for your app, complete with robust support for keyboard navigation.
 ---
 
 <iframe class="w-full h-[378px] mt-8 mb-4 rounded-xl" src="/svelte-headlessui/example/listbox" frameborder="0" scrolling="no"></iframe>
