--- a/packages/docs/src/pages/menu.mdx
+++ b/packages/docs/src/pages/menu.mdx
@@ -2,6 +2,9 @@
 title: Menu (Dropdown)
 description: Menu (Dropdown)
 layout: ../layouts/MainLayout.astro
+image:
+  src: /svelte-headlessui/menu.png
+  alt: Menus offer an easy way to build custom, accessible dropdown components with robust support for keyboard navigation.
 ---
 
 <iframe class="w-full h-[378px] mt-8 mb-4 rounded-xl" src="/svelte-headlessui/example/menu" frameborder="0" scrolling="no"></iframe>
