--- a/packages/docs/src/pages/transition.mdx
+++ b/packages/docs/src/pages/transition.mdx
@@ -2,12 +2,17 @@
 title: Transition
 description: Transition
 layout: ../layouts/MainLayout.astro
+image:
+  src: /svelte-headlessui/transition.png
+  alt: The Transition component lets you add enter/leave transitions to conditionally rendered elements, using CSS classes to control the actual transition styles in the different stages of the transition.
 ---
 
 <iframe class="w-full h-[378px] mt-8 mb-4 rounded-xl" src="/svelte-headlessui/example/transition" frameborder="0" scrolling="no"></iframe>
 <a href="/svelte-headlessui/example/transition" target="_blank">
 	Open in separate tab
 </a>
+
+NOTE: the transition element is published as a separate package `svelte-transition`
 
 ## Example
 
