--- a/packages/docs/src/pages/combobox.mdx
+++ b/packages/docs/src/pages/combobox.mdx
@@ -2,6 +2,9 @@
 title: Combobox (Autocomplete)
 description: Combobox (Autocomplete)
 layout: ../layouts/MainLayout.astro
+image:
+  src: /svelte-headlessui/combobox.png
+  alt: Comboboxes are the foundation of accessible autocompletes and command palettes for your app, complete with robust support for keyboard navigation.
 ---
 
 <iframe class="w-full h-[378px] mt-8 mb-4 rounded-xl" src="/svelte-headlessui/example/combobox" frameborder="0" scrolling="no"></iframe>
