--- a/packages/docs/src/pages/popover.mdx
+++ b/packages/docs/src/pages/popover.mdx
@@ -2,6 +2,9 @@
 title: Popover
 description: Popover
 layout: ../layouts/MainLayout.astro
+image:
+  src: /svelte-headlessui/popover.png
+  alt: Popovers are perfect for floating panels with arbitrary content like navigation menus, mobile menus and flyout menus.
 ---
 
 <iframe class="w-full h-[508px] mt-8 mb-4 rounded-xl" src="/svelte-headlessui/example/popover" frameborder="0" scrolling="no"></iframe>
