--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -4,9 +4,9 @@ description: Introduction to Svelte-HeadlessUI
 layout: ../layouts/MainLayout.astro
 ---
 
-![minified](https://img.shields.io/bundlephobia/min/svelte-headlessui?style=for-the-badge)
+![minified](https://img.shields.io/bundlephobia/min/svelte-headlessui/0.0.8?style=for-the-badge)
 
-![minified zipped](https://img.shields.io/bundlephobia/minzip/svelte-headlessui?style=for-the-badge)
+![minified zipped](https://img.shields.io/bundlephobia/minzip/svelte-headlessui/0.0.8?style=for-the-badge)
 
 # Svelte-HeadlessUI
 
