Update docs to use logo Also add to readme & credit

--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -35,3 +35,7 @@ See the individual component pages for usage examples.
 ## Alternative
 
 You may be interested in evaluating [@rgossiaux/svelte-headlessui](https://svelte-headlessui.goss.io). This package aligns closer to the official components in it's approach although I believe that approach (driven by React / Vue) contributes to the [larger size of 173kB minified / 29kB minified + gzipped](https://bundlephobia.com/package/@rgossiaux/svelte-headlessui@1.0.2).
+
+## Logo
+
+Special thanks to [Shoob](https://github.com/hshoob) for the logo!
