--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -13,7 +13,7 @@ layout: ../layouts/MainLayout.astro
 `svelte-headlessui` is an unofficial implementation of [Tailwind HeadlessUI](https://headlessui.com/) for [Svelte](https://svelte.dev/). Just like the official implementation, they are:
 
 - ✅ Completely unstyled
-- ✅ Fully WIA-ARIA accessible UI components
+- ✅ Fully WAI-ARIA accessible UI components
 - ✅ Fully typed with Typescript
 - ✅ Designed to integrate beautifully with Tailwind CSS
 
