--- a/packages/docs/src/pages/radio-group.mdx
+++ b/packages/docs/src/pages/radio-group.mdx
@@ -14,7 +14,7 @@ image:
 
 ## Note
 
-Svelte provides a [group bind option](https://svelte.dev/docs#template-syntax-element-directives-bind-group) that provides radio-button group functionality out-of-the-box. Combined with some CSS wizardry to hide the inputs and style the labels, we can achieve the nicely styled radio-group input without needing any additional components or code. By re-using the standard `input[type=radio]` functionality we keep the WIA-ARIA behavior and keyboard handling that the browser already provides.
+Svelte provides a [group bind option](https://svelte.dev/docs#template-syntax-element-directives-bind-group) that provides radio-button group functionality out-of-the-box. Combined with some CSS wizardry to hide the inputs and style the labels, we can achieve the nicely styled radio-group input without needing any additional components or code. By re-using the standard `input[type=radio]` functionality we keep the WAI-ARIA behavior and keyboard handling that the browser already provides.
 
 You would probably split each "option" into a separate component to reduce the complexity and repetition of the CSS classes.
 
