--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -19,7 +19,7 @@ layout: ../layouts/MainLayout.astro
 
 But also:
 
-- ✅ Designed to integrate beautifully with Svelte and SvelteKit
+- ✅ Designed to integrate easily with Svelte and SvelteKit
 - ✅ Less than 14kB minified / 4kB minified gzipped
 
 ## Installation
@@ -38,8 +38,8 @@ NOTE: Some of the examples use [`svelte-transition`](https://www.npmjs.com/packa
 
 ## Alternative
 
-You may be interested in evaluating [@rgossiaux/svelte-headlessui](https://svelte-headlessui.goss.io). This package aligns closer to the official components in it's approach although I believe that approach (driven by React / Vue) contributes to the [larger size of 140.1kB minified / 27.5kB minified + gzipped](https://bundlephobia.com/package/@rgossiaux/svelte-headlessui@2.0.0).
+You may be interested in evaluating [@rgossiaux/svelte-headlessui](https://svelte-headlessui.goss.io). This package aligns closer to the official components in it's approach although I believe that approach (driven by React / Vue) contributes to the [10x larger size of 140.1kB minified javascript](https://bundlephobia.com/package/@rgossiaux/svelte-headlessui@2.0.0).
 
 ## Logo
 
-Special thanks to [Shoob](https://github.com/hshoob) for the logo!
+Special thanks to [Shoob](https://github.com/hshoob) for the awesome logo!
